[gd_scene load_steps=35 format=3 uid="uid://c4j6enbgs1r70"]

[ext_resource type="Script" path="res://Timer.gd" id="1_asy31"]
[ext_resource type="PackedScene" uid="uid://c3ijc54xdmkip" path="res://player.tscn" id="2_5gbvf"]
[ext_resource type="Script" path="res://ChunkSpawner.gd" id="2_n1x2w"]
[ext_resource type="AudioStream" uid="uid://iwuda40aiqo8" path="res://arts/Event.wav" id="2_rxtn7"]
[ext_resource type="Script" path="res://Camera2d.gd" id="2_tbqe3"]
[ext_resource type="AudioStream" uid="uid://blliyd12row48" path="res://arts/Buildup.wav" id="3_svxki"]
[ext_resource type="Script" path="res://AsteroidSpawner.gd" id="4_uaiga"]
[ext_resource type="Texture2D" uid="uid://b6xeowpppo74x" path="res://arts/energy1.png" id="6_wkt4m"]
[ext_resource type="Texture2D" uid="uid://bmp3jfy84bbto" path="res://arts/energy2.png" id="7_28qcv"]
[ext_resource type="Texture2D" uid="uid://bhfiyujrkx3up" path="res://arts/background_sky.png" id="7_rtlkq"]
[ext_resource type="Texture2D" uid="uid://ddbheaqvlvtbn" path="res://arts/space3.png" id="8_5wpf6"]
[ext_resource type="Texture2D" uid="uid://2nl6inetn5oi" path="res://arts/energy3.png" id="8_gd5dy"]
[ext_resource type="Texture2D" uid="uid://dmvbsaj8qdpn4" path="res://arts/energy4.png" id="9_1pfty"]
[ext_resource type="Texture2D" uid="uid://brkcda6v3krnv" path="res://arts/background_buildings.png" id="9_dc4n8"]
[ext_resource type="Texture2D" uid="uid://vtx10u5018wl" path="res://arts/energy5.png" id="10_q23ut"]
[ext_resource type="Shader" path="res://shaders/noop.gdshader" id="13_iuega"]
[ext_resource type="AudioStream" uid="uid://irgokd10nmye" path="res://arts/loop2.wav" id="16_f6gbk"]
[ext_resource type="Texture2D" uid="uid://d1k3h0qrdkkki" path="res://arts/ui.png" id="17_fa37l"]
[ext_resource type="Script" path="res://ShaderCache2.gd" id="17_rs6m4"]
[ext_resource type="PackedScene" uid="uid://c86m46k0dlrxk" path="res://sound_control.tscn" id="19_3ycil"]
[ext_resource type="Shader" path="res://shaders/crt.gdshader" id="19_vbjpm"]
[ext_resource type="Shader" path="res://shaders/grayscale.gdshader" id="20_gl0j0"]
[ext_resource type="Shader" path="res://shaders/hex.gdshader" id="20_x7ynj"]
[ext_resource type="Shader" path="res://shaders/invert.gdshader" id="21_co5sj"]

[sub_resource type="Gradient" id="Gradient_xuwjs"]
offsets = PackedFloat32Array(0, 0.950549)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u4cvj"]
gradient = SubResource("Gradient_xuwjs")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwh2r"]
size = Vector2(69, 297)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktd44"]
size = Vector2(74, 299)

[sub_resource type="SpriteFrames" id="SpriteFrames_n2bjm"]
animations = [{
"frames": [ExtResource("6_wkt4m"), ExtResource("7_28qcv"), ExtResource("8_gd5dy"), ExtResource("9_1pfty"), ExtResource("10_q23ut")],
"loop": true,
"name": &"Power",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s2t28"]
shader = ExtResource("20_gl0j0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n8n8v"]
shader = ExtResource("19_vbjpm")
shader_parameter/aberration = null
shader_parameter/brightness = null
shader_parameter/clip_warp = null
shader_parameter/discolor = null
shader_parameter/distort_intensity = null
shader_parameter/grille_opacity = null
shader_parameter/noise_opacity = null
shader_parameter/noise_speed = null
shader_parameter/overlay = null
shader_parameter/pixelate = null
shader_parameter/resolution = null
shader_parameter/roll = null
shader_parameter/roll_size = null
shader_parameter/roll_speed = null
shader_parameter/roll_variation = null
shader_parameter/scanlines_opacity = null
shader_parameter/scanlines_width = null
shader_parameter/static_noise_intensity = null
shader_parameter/vignette_intensity = null
shader_parameter/vignette_opacity = null
shader_parameter/warp_amount = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i7ird"]
shader = ExtResource("20_x7ynj")
shader_parameter/size = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rv2e8"]
shader = ExtResource("21_co5sj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p0uom"]
shader = ExtResource("13_iuega")

[node name="Node2d" type="Node2D"]
texture_filter = 1

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
autostart = true
script = ExtResource("1_asy31")

[node name="EventEffect" type="AudioStreamPlayer2D" parent="Timer"]
stream = ExtResource("2_rxtn7")

[node name="BuildUp" type="AudioStreamPlayer2D" parent="Timer"]
stream = ExtResource("3_svxki")
pitch_scale = 2.0

[node name="ChunkManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_n1x2w")

[node name="FakeParallax" type="Node2D" parent="ChunkManager"]

[node name="Chunks" type="Node2D" parent="ChunkManager"]

[node name="Camera2d" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -31)
current = true
zoom = Vector2(3, 3)
script = ExtResource("2_tbqe3")

[node name="AsteroidSpawner" type="Node2D" parent="Camera2d"]
unique_name_in_owner = true
position = Vector2(237, -134)
script = ExtResource("4_uaiga")

[node name="Glow" type="Sprite2D" parent="Camera2d"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0, 0.054902, 0.266667)
position = Vector2(13, 21)
scale = Vector2(1.90625, 278)
z_index = 10
texture = SubResource("GradientTexture1D_u4cvj")

[node name="AudioListener2d" type="AudioListener2D" parent="Camera2d"]

[node name="StaticBody2d" type="StaticBody2D" parent="Camera2d"]

[node name="CollisionShape2d" type="CollisionShape2D" parent="Camera2d/StaticBody2d"]
position = Vector2(-239, 11.5)
shape = SubResource("RectangleShape2D_gwh2r")

[node name="CollisionShape2d2" type="CollisionShape2D" parent="Camera2d/StaticBody2d"]
position = Vector2(241, 11)
shape = SubResource("RectangleShape2D_ktd44")

[node name="Player" parent="." instance=ExtResource("2_5gbvf")]
position = Vector2(0, -31)
mass = 70.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_offset = Vector2(170, 70)

[node name="Sprite2d" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
z_index = -100
texture = ExtResource("7_rtlkq")

[node name="Rift" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
unique_name_in_owner = true
position = Vector2(0, -21)
z_index = -50
texture = ExtResource("8_5wpf6")

[node name="Sprite2d2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
z_index = -25
texture = ExtResource("9_dc4n8")

[node name="Lasers" type="AnimatedSprite2D" parent="ParallaxBackground/ParallaxLayer"]
unique_name_in_owner = true
modulate = Color(1, 0.14902, 0, 1)
texture_filter = 1
frames = SubResource("SpriteFrames_n2bjm")
animation = &"Power"
playing = true

[node name="AudioStreamPlayer2d" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_f6gbk")
autoplay = true

[node name="ShaderCache2" type="CanvasLayer" parent="."]
scale = Vector2(0.01, 0.01)
transform = Transform2D(0.01, 0, 0, 0.01, 0, 0)
script = ExtResource("17_rs6m4")

[node name="Grayscale" type="ColorRect" parent="ShaderCache2"]
material = SubResource("ShaderMaterial_s2t28")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CRT" type="ColorRect" parent="ShaderCache2"]
material = SubResource("ShaderMaterial_n8n8v")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HEX" type="ColorRect" parent="ShaderCache2"]
material = SubResource("ShaderMaterial_i7ird")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Invert" type="ColorRect" parent="ShaderCache2"]
material = SubResource("ShaderMaterial_rv2e8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScreenShader" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_p0uom")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DistanceDisplay" type="Label" parent="CanvasLayer2/Control"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.5
offset_right = 62.5
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathPanel" type="Panel" parent="CanvasLayer2/Control"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer2/Control/DeathPanel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -134.0
offset_right = 262.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "You ran X meters until ..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Intro" type="Panel" parent="CanvasLayer2/Control"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer2/Control/Intro"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.0
offset_top = -213.0
offset_right = 294.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 22
text = "The Quantum Power Plant ruptured the fabric of our Universe. Other dimensions are pooring into our world.
 
Our analysis says major flares will occur every 10 seconds. Expect the unexpected.

"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2/Control/Intro"]
offset_left = 877.0
offset_top = 337.0
offset_right = 1175.0
offset_bottom = 617.0
texture = ExtResource("17_fa37l")

[node name="HSlider" parent="CanvasLayer2/Control" instance=ExtResource("19_3ycil")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -139.0
offset_top = 13.0
offset_right = -14.0
offset_bottom = 29.0
grow_horizontal = 0

[node name="ShaderCache" type="Node" parent="."]

[connection signal="timeout" from="Timer" to="Timer" method="_on_timer_timeout"]
